--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <title>Hello Jamshoro</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-    <h1>Abore thaki pyas hinyar kayo</h1>
+    <h1>Abore th hinr kayf sd sdsd ds ds sdddsd</h1>
     <script src="" async defer></script>
 </body>
 
